use csso for css minification through graalvm