@@ -1,21 +1,20 @@
 package ru.vyarus.gradle.frontend.util.minify;
 
-import com.google.common.css.ExitCodeHandler;
-import com.google.common.css.IdentitySubstitutionMap;
-import com.google.common.css.JobDescription;
-import com.google.common.css.JobDescriptionBuilder;
-import com.google.common.css.SourceCode;
-import com.google.common.css.compiler.ClosureStylesheetCompiler;
-import com.google.common.css.compiler.ast.BasicErrorManager;
-import com.google.common.css.compiler.gssfunctions.DefaultGssFunctionMapProvider;
+import org.graalvm.polyglot.Context;
+import org.graalvm.polyglot.Source;
+import org.graalvm.polyglot.Value;
 import ru.vyarus.gradle.frontend.util.FileUtils;
+import ru.vyarus.gradle.frontend.util.SourceMapUtils;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 /**
- * https://github.com/616slayer616/closure-stylesheets
+ * https://github.com/css/csso
+ * latest csso version could be loaded from https://cdn.jsdelivr.net/npm/csso
  *
  * @author Vyacheslav Rusakov
  * @since 31.01.2023
@@ -31,48 +30,62 @@ public final class CssMinifier {
         final File target = new File(file.getParentFile(), name);
         final File sourceMap = new File(target.getAbsolutePath() + ".map");
 
-        final JobDescriptionBuilder builder = new JobDescriptionBuilder();
-        builder.setOutputFormat(JobDescription.OutputFormat.COMPRESSED);
-        builder.setAllowDefPropagation(true);
-        builder.setAllowUnrecognizedFunctions(true);
-        builder.setAllowUnrecognizedProperties(true);
-        builder.setAllowKeyframes(true);
-        builder.setAllowWebkitKeyframes(true);
-        builder.setProcessDependencies(true);
-        builder.setSimplifyCss(true);
-        builder.setEliminateDeadStyles(false);
-        builder.setCssSubstitutionMapProvider(IdentitySubstitutionMap::new);
-        builder.setPreserveComments(false);
-        builder.setGssFunctionMapProvider(new DefaultGssFunctionMapProvider());
-        builder.setSourceMapLevel(JobDescription.SourceMapDetailLevel.DEFAULT);
-        builder.setCreateSourceMap(sourceMaps);
+        File localCsso = null;
+        try (Context context = Context.newBuilder("js")
+                .currentWorkingDirectory(file.getParentFile().toPath())
+                .allowIO(true)
+                .option("engine.WarnInterpreterOnly", "false")
+                .build()) {
 
-        try {
-            builder.addInput(new SourceCode(file.getName(), Files.readString(file.toPath())));
-        } catch (IOException e) {
-            throw new IllegalStateException("Failed to read css: " + file.getAbsolutePath(), e);
-        }
+            // local file to simplify referencing
+            localCsso = new File(file.getParentFile(), "__csso.js");
+            InputStream in = CssMinifier.class.getResourceAsStream("/csso.js");
+            Files.write(localCsso.toPath(), in.readAllBytes());
+            in.close();
 
-        final JobDescription job = builder.getJobDescription();
-        final ExitCodeHandler exitHandler = exitCode -> {
-            if (exitCode != 0) {
-                throw new IllegalStateException("Failed to minify css");
+            Value jsBindings = context.getBindings("js");
+            jsBindings.putMember("css", Files.readString(file.toPath()));
+
+            String options;
+            if (sourceMaps) {
+
+                options = "{ sourceMap: true, filename: '" + file.getName() + "'}";
+            } else {
+                options = "{}";
             }
-        };
-        final BasicErrorManager errorManager = new BasicErrorManager() {
-            @Override
-            public void print(String msg) {
-                // write errors to console
-                System.out.println(msg);
-            }
-        };
-        final ClosureStylesheetCompiler compiler = new ClosureStylesheetCompiler(job, exitHandler, errorManager);
+            jsBindings.putMember("opts", options);
 
-        String output = compiler.execute(target, sourceMap);
-        if (sourceMaps) {
-            output += "\n/*# sourceMappingURL=" + sourceMap.getName() + "*/";
+            String code = "import { minify } from '__csso.js';" +
+                    "var res = minify(css, " + options + ");" +
+                    "if (res.map) {" +
+                    "   res.sourceMap = res.map.toString();" +
+                    "}" +
+                    "res;";
+
+            Value res = context.eval(Source.newBuilder("js", code, "cssmin.mjs").build());
+            String minified = res.getMember("css").asString();
+            String sourceMapContent = res.getMember("sourceMap") != null ? res.getMember("sourceMap").asString() : null;
+
+            if (sourceMapContent != null) {
+                minified += "\n/*# sourceMappingURL=" + sourceMap.getName() + "*/";
+                Files.writeString(sourceMap.toPath(), sourceMapContent, StandardCharsets.UTF_8);
+                SourceMapUtils.includeSources(sourceMap);
+            }
+
+            Files.writeString(target.toPath(), minified, StandardCharsets.UTF_8);
+
+            // remove original file
+            System.out.println("Minified file source removed: " + file.getName());
+            file.delete();
+
+        } catch (IOException ex) {
+            throw new IllegalStateException("Failed to minify", ex);
+        } finally {
+            // remove temporary lib
+            if (localCsso != null && localCsso.exists()) {
+                localCsso.delete();
+            }
         }
-        FileUtils.writeFile(target, output);
         return new MinifyResult(target, sourceMaps ? sourceMap : null);
     }
 }
